[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "txthighlight"
version = "0.1.0a5"
description = "A tiny local web app for highlighting and commenting on plain text files."
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
txthighlight = "txthighlight:main"

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/txthighlight"
"Bug Tracker" = "https://github.com/jifengwu2k/txthighlight/issues"
